:zap: 优化代码